---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
type A = "a";
type B = "b";
type C = "c";
export type Union = A | B | C;

const A = "a";
const B = 1;
const C = true;

export type Union2 = typeof A | typeof B | typeof C;

export { A, B };
```

## Module Info

```
Exports {
  "Union" => {
    ExportOwnExport => JsOwnExport::Binding(54..59)
  }
  "Union2" => {
    ExportOwnExport => JsOwnExport::Binding(131..137)
  }
  "A" => {
    ExportOwnExport => JsOwnExport::Type(Module(0) TypeId(0))
  }
  "B" => {
    ExportOwnExport => JsOwnExport::Type(Module(0) TypeId(13))
  }
}
Imports {
  No imports
}
```
